--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@ body {
 }
 
 header {
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
