--- a/css/styles.css
+++ b/css/styles.css
@@ -26,3 +26,20 @@ header {
   color: white;
   background-color: cornflowerblue;
 }
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 4em;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: cornflowerblue;
+}
+
+footer svg {
+  color: white;
+  width: 2em;
+  height: 2em;
+}
