--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,22 @@ footer {
   background-color: cornflowerblue;
 }
 
+footer a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+footer a:hover {
+  background-color: rgb(89, 89, 89);
+}
+
+.active {
+  border-bottom: 5px solid sandybrown;
+}
+
 footer svg {
   color: white;
   width: 2em;
