--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,20 @@ main {
   transition: 0.5s all;
 }
 
+.question-tags {
+  display: flex;
+  list-style: none;
+  align-self: flex-start;
+  margin-bottom: -40px;
+}
+
+.question-tags li {
+  margin-right: 10px;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px;
+}
+
 footer {
   position: fixed;
   bottom: 0;
