--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ main {
   color: var(--text-color);
   background-color: var(--card-color);
   width: 80%;
-  height: 300px;
+  min-height: 300px;
   padding: 50px;
   display: flex;
   flex-direction: column;
