--- a/css/profile.css
+++ b/css/profile.css
@@ -1,45 +1,12 @@
-:root {
-  --text-color: white;
-  --accent-color: #a5b1a2;
-  --background-color: #394337;
-  --card-color: #5b6659;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+@import "./global.css";
+@import "./components/header.css";
+@import "./components/footer.css";
+@import "./components/slider.css";
+@import "./components/profile-stats.css";
 
 body {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial,
-    sans-serif;
+  background-image: none;
   background-color: var(--card-color);
-}
-
-header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 4em;
-  color: var(--text-color);
-  background-color: var(--background-color);
-  z-index: 10;
-}
-
-main {
-  margin: 100px 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  gap: 80px;
-  color: var(--text-color);
 }
 
 .hero {
@@ -67,29 +34,6 @@ main {
   gap: 20px;
 }
 
-.stats {
-  width: 70%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  color: white;
-}
-
-.stats div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 30px;
-  border: 2px solid white;
-  border-radius: 10px;
-  padding: 10px 30px;
-}
-
-.stats svg {
-  width: 50px;
-  height: 50px;
-}
-
 .settings {
   width: 70%;
   display: flex;
@@ -103,97 +47,4 @@ main {
   justify-content: space-between;
   align-items: center;
   gap: 20px;
-}
-
-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 4em;
-  display: flex;
-  align-items: center;
-  background-color: var(--background-color);
-  z-index: 10;
-}
-nav {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-footer a {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-footer a:hover {
-  background-color: var(--accent-color);
-}
-
-.active {
-  border-bottom: 5px solid var(--accent-color);
-}
-
-footer svg {
-  color: #edeeef;
-  width: 2em;
-  height: 2em;
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 34px;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 50%;
-}
-
-input:checked + .slider {
-  background-color: var(--background-color);
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px var(--background-color);
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
 }
