--- a/css/components/profile-stats.css
+++ b/css/components/profile-stats.css
@@ -4,6 +4,7 @@
   justify-content: space-evenly;
   align-items: center;
   color: white;
+  gap: 20px;
 }
 
 .stats div {
@@ -13,7 +14,7 @@
   gap: 30px;
   border: 2px solid white;
   border-radius: 10px;
-  padding: 10px 30px;
+  padding: 10px;
 }
 
 .stats svg {
