--- a/css/components/question-card.css
+++ b/css/components/question-card.css
@@ -1,6 +1,7 @@
 .question-card {
-  background-color: var(--card-color);
-  width: 80%;
+  background-color: var(--primary-color);
+  width: 100%;
+  max-width: 800px;
   min-height: 300px;
   padding: 50px;
   display: flex;
@@ -33,7 +34,7 @@
 
 .question-card__question {
   font-size: 1.2rem;
-  width: 50%;
+  margin: 10px;
   text-align: center;
 }
 
@@ -51,7 +52,7 @@
 .question-card__button {
   cursor: pointer;
   color: var(--text-color);
-  background-color: var(--background-color);
+  background-color: var(--secondary-color);
   border-radius: 10px;
   box-shadow: 4px 5px 3px black;
   padding: 15px;
