--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -5,7 +5,7 @@ footer {
   height: 4em;
   display: flex;
   align-items: center;
-  background-color: var(--background-color);
+  background-color: var(--primary-color);
   z-index: 10;
 }
 
