change style to lighter colors and add index.js

--- a/css/global.css
+++ b/css/global.css
@@ -7,10 +7,10 @@
 }
 
 :root {
-  --text-color: white;
-  --accent-color: #a5b1a2;
-  --primary-color: #394337;
-  --secondary-color: #5b6659;
+  --text-color: black;
+  --accent-color: #dfe0df;
+  --primary-color: #ff980e;
+  --secondary-color: #fff8f0;
 }
 
 body {
