--- a/css/components/profile-stats.css
+++ b/css/components/profile-stats.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  color: white;
+  color: var(--text-color);
   gap: 20px;
 }
 
@@ -12,7 +12,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 30px;
-  border: 2px solid white;
+  border: 2px solid var(--text-color);
   border-radius: 10px;
   padding: 10px;
 }
