--- a/css/components/question-card.css
+++ b/css/components/question-card.css
@@ -3,7 +3,8 @@
   width: 100%;
   max-width: 800px;
   min-height: 300px;
-  padding: 50px;
+  padding: 20px;
+  padding-bottom: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -14,7 +15,7 @@
 }
 
 .question-card__bookmark {
-  color: white;
+  color: var(--text-color);
   position: absolute;
   right: 20px;
   top: -15px;
@@ -24,12 +25,12 @@
 }
 
 .question-card__bookmark:hover {
-  fill: white;
+  fill: var(--text-color);
   transition: all 0.5s;
 }
 
 .bookmark--active {
-  fill: white;
+  fill: var(--text-color);
 }
 
 .question-card__question {
@@ -54,26 +55,25 @@
   color: var(--text-color);
   background-color: var(--secondary-color);
   border-radius: 10px;
-  box-shadow: 4px 5px 3px black;
+  box-shadow: 4px 5px 3px var(--text-color);
   padding: 15px;
-  transition: 0.5s all;
+  transition: 0.3s all;
 }
 
 .question-card__button:hover {
   box-shadow: none;
-  transition: 0.5s all;
+  transition: 0.3s all;
 }
 
 .question-tags {
   display: flex;
   list-style: none;
   align-self: flex-start;
-  margin-bottom: -40px;
 }
 
 .question-tags__item {
   margin-right: 10px;
-  border: 1px solid white;
+  border: 1px solid var(--text-color);
   border-radius: 10px;
   padding: 5px;
 }
