--- a/css/components/slider.css
+++ b/css/components/slider.css
@@ -1,52 +1,50 @@
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+.profile__settings {
+  width: 90%;
+  margin: auto;
 }
 
-.switch input {
-  opacity: 0;
-  width: 0;
+.profile__settings-darkmode-input {
   height: 0;
+  width: 0;
+  visibility: hidden;
 }
 
-.slider {
-  position: absolute;
+.profile__settings-darkmode-label {
   cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 34px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 40px;
 }
 
-.slider:before {
+.profile__settings-darkmode-label:before {
+  width: 80px;
+  height: 40px;
+  background: var(--accent-color);
+  display: block;
+  border-radius: 100px;
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 50%;
+  right: 0;
 }
 
-input:checked + .slider {
-  background-color: var(--primary-color);
+.profile__settings-darkmode-label:after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  right: 40px;
+  width: 30px;
+  height: 30px;
+  background: #fff;
+  border-radius: 90px;
+  transition: right 0.3s;
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px var(--primary-color);
+.profile__settings-darkmode-input:checked + .profile__settings-darkmode-label:before {
+  background: var(--primary-color);
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+.profile__settings-darkmode-input:checked + .profile__settings-darkmode-label:after {
+  right: 5px;
 }
