--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,6 @@
 @import "./components/header.css";
 @import "./components/question-card.css";
 @import "./components/footer.css";
+@import "./components/profile.css";
+@import "./components/slider.css";
+@import "./components/profile-stats.css";
