--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,4 @@
 @import "./components/profile.css";
 @import "./components/slider.css";
 @import "./components/profile-stats.css";
+@import "./components/new-card.css";
