--- a/css/components/question-card.css
+++ b/css/components/question-card.css
@@ -1,27 +1,26 @@
 .question-card {
   background-color: var(--primary-color);
   width: 100%;
+  min-width: 400px;
   max-width: 800px;
   min-height: 300px;
-  padding: 20px;
-  padding-bottom: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  gap: 10px;
+  padding: 2rem;
+  text-align: center;
   border-radius: 10px;
   position: relative;
+  display: grid;
+  gap: 2rem;
+  justify-items: center;
 }
 
 .question-card__bookmark {
+  position: absolute;
+  right: 1rem;
+  top: -1.5rem;
   border: none;
   background: none;
   cursor: pointer;
   color: var(--text-color);
-  position: absolute;
-  right: 20px;
-  top: -15px;
   width: 3em;
   height: 3em;
 }
@@ -59,6 +58,7 @@
   box-shadow: 4px 5px 3px var(--text-color);
   padding: 15px;
   transition: 0.3s all;
+  width: 50%;
 }
 
 .question-card__button:hover {
